--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
       <select name="room">
         <option value="lobby">Lobby</option>
         <option value="unicorn">Unicorn</option>
-        <option value="poker">Poker</option>
+        <option value="hackreactor">Hack Reactor</option>
         <option value="discussion">discussion</option>
       </select>
       <input type="text" class="textbox" placeholder="Type your message here">
