--- a/client/index.html
+++ b/client/index.html
@@ -27,14 +27,14 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <select name="room">
+      <select name="room" id="roomName">
         <option value="lobby">Lobby</option>
         <option value="unicorn">Unicorn</option>
         <option value="hackreactor">Hack Reactor</option>
         <option value="discussion">discussion</option>
       </select>
       <input type="text" class="textbox" placeholder="Type your message here">
-      <input type="submit" class="button" value="click me!">
+      <input type="submit" class="button" id="send-message" value="click me!">
     </div>
     <div id="chats">
       
