Add clearMessages and addMessages methods

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
       </select>
       <input type="text" class="textbox" placeholder="Type your message here">
       <input type="submit" class="button" id="send-message" value="click me!">
+      <button id="refresh">Refresh</button>
     </div>
     <div id="chats">
       
