Add renderRooms method

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <select name="room" id="roomName">
+      <select name="room" id="roomSelect">
         <option value="lobby">Lobby</option>
         <option value="unicorn">Unicorn</option>
         <option value="hackreactor">Hack Reactor</option>
