Outline friending method

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,10 @@
   </head>
   <body>
     <div id="main">
+      <div>Friends
+        <ul id="friendlist">
+        </ul>
+      </div>
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <select name="room" id="roomSelect">
