Attempt and fail to retrieve data via fetch

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
     <div id="main">
       <div>Friends
         <ul id="friendlist">
+          <li class='username Sally'>Sally</li>
         </ul>
       </div>
       <h1>chatterbox</h1>
