Add styling to chats

--- a/client/index.html
+++ b/client/index.html
@@ -33,8 +33,8 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <select name="room" id="roomSelect">
-        <option value="lobby">Lobby</option>
-        <option value="unicorn">Unicorn</option>
+        <option value="lobby">lobby</option>
+        <option value="unicorn">unicorn</option>
         <option value="hackreactor">Hack Reactor</option>
         <option value="discussion">discussion</option>
       </select>
