Update html id for send and message text, initialize fetch upon page load

--- a/client/index.html
+++ b/client/index.html
@@ -38,8 +38,8 @@
         <option value="hackreactor">Hack Reactor</option>
         <option value="discussion">discussion</option>
       </select>
-      <input type="text" class="textbox" placeholder="Type your message here">
-      <input type="submit" class="button" id="send-message" value="click me!">
+      <input type="text" id="message" placeholder="Type your message here">
+      <input type="submit" class="button submit" id="send" value="click me">
       <button id="refresh">Refresh</button>
     </div>
     <div id="chats">
